Two-col: CSS tweaks

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -67,7 +67,7 @@
     #if($fieldValueObject.isImage())
     ## #if($userCanEdit)<br />#end
       <a href="$downloadUrl" target="_blank">
-      <img border="0" src="$downloadUrl.500.$fieldValueObject.getExtension()" style="float:left; max-width: 100%"/>
+      <img border="0" src="$downloadUrl.500.$fieldValueObject.getExtension()" style="float:left; max-width: 100%; border-radius: 0.5em"/>
       </a>
     #end
   #end
