Two-col: CSS tweaks

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -46,4 +46,7 @@
     #parse("gui/resources/input/comments.vm")
   </div>
 #end
+#if($formStyle != "SINGLE_COLUMN")
+  <br clear="both">
+#end
 ##&nbsp; ## Todo: check in single column
