Two-col: CSS tweaks

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -47,6 +47,6 @@
   </div>
 #end
 #if($formStyle != "SINGLE_COLUMN")
-  <br clear="both">
+  <br clear="right">
 #end
 ##&nbsp; ## Todo: check in single column
