Two-col: CSS tweaks

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -36,9 +36,11 @@
   #set($fieldClass = $field.getClass().getSimpleName())
   #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
     ## relation and file field names included in resources/input/relation.vm
-    $field
+    <table><tr><td>$field</td><td>
   #end
   #parse('gui/resources/input/input.vm')
+  #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
+    </td></tr></table>
 #end
 #if($field.equals($lastField))
   </div> <!-- end of last block -->
