Two-col: CSS tweaks

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -41,6 +41,7 @@
   #parse('gui/resources/input/input.vm')
   #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
     </td></tr></table>
+  #end
 #end
 #if($field.equals($lastField))
   </div> <!-- end of last block -->
