--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -625,8 +625,8 @@ div#reportData {
 }
 
 #reportData .block input, #reportData .block select {
-  float: right;
-  width: 60%;
+  /*float: right; */
+  width: 100%;
   border: 1px solid white;
   font-size: 10pt;
   padding: 0.2em;
