--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -37,7 +37,7 @@
   #set($fieldClass = $field.getClass().getSimpleName())
   #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
     ## relation and file field names included in resources/input/relation.vm
-    $field #if($sectionHasImage) <p> #end
+    $field
     ##<table style="width:100%; text-align:right"><tr><td style="width:40%">$field</td><td style="width:60%">
   #end
   #parse('gui/resources/input/input.vm')
