--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -632,6 +632,7 @@ div#reportData {
   padding: 0.2em;
   position: relative;
   top: -0.4em;
+  border-radius: 0.5em;
 }
 
 .block input.ac_input {
@@ -639,11 +640,11 @@ div#reportData {
 }
 
 #reportData .block input:hover {
-  border: 1px solid #cccccc!important;
+  border: 1px solid #cecece!important;
 }
 
 #reportData .block input:focus {
-  border: 1px solid #cccccc!important;
+  border: 1px solid #cecece!important;
 }
 
 #reportData .block input[type=checkbox] {
