Two-col: comments

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -665,6 +665,11 @@ div#reportData {
   width: auto;
 }
 
+#reportData .block input.comment_input {
+	float: none;
+	width: auto;
+}
+
 /* 3) Summary tab css */
 
 
