--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -36,6 +36,7 @@
   #set($activateComments = true)
 #end
 #if($activateComments) ## TODO: test with SINGLE_COLUMN
+  <div class="comment_wrapper">
   <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
 #end
 #parse("gui/resources/input/${fieldCategory.toString().toLowerCase()}.vm")
@@ -45,6 +46,7 @@
   <div class="comments" id="comments_$field.getInternalFieldName()">
     #parse("gui/resources/input/comments.vm")
   </div>
+  </div> ## end of comment_wrapper
 #end
 #if($formStyle != "SINGLE_COLUMN")
   <br clear="right">
