--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -35,15 +35,13 @@
     <div class="block two_cols non_section">
   #end
   #set($fieldClass = $field.getClass().getSimpleName())
+  <div class="row">
   #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
     ## relation and file field names included in resources/input/relation.vm
     $field
-    ##<table style="width:100%; text-align:right"><tr><td style="width:40%">$field</td><td style="width:60%">
   #end
   #parse('gui/resources/input/input.vm')
-  #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
-    ##</td></tr></table>
-  #end
+  </div>
 #end
 #if($field.equals($lastField))
   </div> <!-- end of last block -->
