--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -635,7 +635,7 @@ div#reportData {
   border-radius: 0.5em;
 }
 
-.date_wrapper select, .date_wrapper input {
+.date select, .date input {
   width: auto!important;
   float: none!important;
 }
