--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -639,6 +639,11 @@ div#reportData {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#reportData .block select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 #reportData .block textarea {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -688,7 +693,7 @@ div#reportData {
 
 #reportData .block input.comment_input {
 	float: none;
-	width: auto;
+	width: 200px;
 	top: 0;
 	border: 1px solid #cecece;
 }
