Two-col: webkit

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -644,6 +644,11 @@ div#reportData {
   -moz-appearance: none;
 }
 
+#reportData .block select:hover {
+  -webkit-appearance: default;
+  -moz-appearance: default;
+}
+
 #reportData .block textarea {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
