--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -607,6 +607,7 @@ div#reportData {
   background-color: white;
   margin: 0.5em;
   margin-right: 0;
+  margin-top: 0;
   padding: 1em;
   border-radius: 0.5em;
   break-inside: avoid-column;
