--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -409,6 +409,7 @@ img.mini_icon {
   text-transform: lowercase;
   top: 0;
   opacity: 0.9;
+  z-index: 99;
 }
 
 table#reportData th div.mini_action {
