--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -35,12 +35,14 @@
 #if($userCanEdit && (!$globalEdit) && (!$gtpbPublicTable))
   #set($activateComments = true)
 #end
-#if($activateComments) ## TODO: test with SINGLE_COLUMN
+#if($activateComments && ($formStyle != "SINGLE_COLUMN"))
   <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
 #end
 #parse("gui/resources/input/${fieldCategory.toString().toLowerCase()}.vm")
 #if($activateComments)
-  ## Comments
+  #if($formStyle == "SINGLE_COLUMN")
+    <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
+  #end
   <div class="add_comment_row">Add comment: <input type="text" class="comment_input" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
   <div class="comments" id="comments_$field.getInternalFieldName()">
     #parse("gui/resources/input/comments.vm")
