--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -628,7 +628,7 @@ div#reportData {
 
 #reportData .block.non_section h1 {
 	text-align: left;
-	margin: auto;
+	margin-bottom: 0.8em;
 }
 
 #reportData .block img {
