--- a/gtpb_clientside/resources/datePicker.css
+++ b/gtpb_clientside/resources/datePicker.css
@@ -64,7 +64,8 @@ a.dp-choose-date {
 	width: 16px;
 	height: 16px;
 	padding: 0;
-	margin: 5px 3px 0;
+	margin-top: 5px;
+	margin-right: 3px;
 	display: block;
 	text-indent: -2000px;
 	overflow: hidden;
