--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -629,7 +629,7 @@ div#reportData {
 #reportData .block.non_section h1 {
 	text-align: left;
 	margin-bottom: 0.8em;
-	margin: auto;
+	margin-top: 0.5em;
 }
 
 #reportData .block img {
