--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -78,7 +78,7 @@
   	#else
       <form method="post" enctype="multipart/form-data" action="AppController.servlet" class="fileUploader">
         #set($showFieldName = false)
-        #if(($formStyle != "SINGLE_COLUMN") && $fieldValueObject.isNull() || (!$fieldValueObject.isImage()))
+        #if(($formStyle.name() != "SINGLE_COLUMN") && $fieldValueObject.isNull() || (!$fieldValueObject.isImage()))
           Field name $field
           #set($showFieldName = true)
         #end
