Form layout: saved CSS test

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -231,7 +231,7 @@ textarea {
 }
 
 #reportData .input_saved {
-  background-color: green;
+  background-color: #DDEFE0;
 }
 
 *[error] { color:red; }
