--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -70,7 +70,7 @@
 #else
   #if($userCanEdit)
   <div class="relation_field">##
-    #if($formStyle != "SINGLE_COLUMN") $field.getSimplifiedFieldName() #end
+    #if(!$singleColumn) $field.getSimplifiedFieldName() #end ## $singleColumn: see input.vm
     <input name="$internalFieldName" ##
   	type="hidden" class="relation_hidden" ##
   	value="$fieldValue" ##
