Mobile header buttons overlap debug

--- a/gtpb_clientside/WEB-INF/templates/gui/mobile/pane3_selector.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/mobile/pane3_selector.vm
@@ -24,8 +24,10 @@
 #if($view.loggedInUserAllowedTo("EDIT_TABLE_DATA",$table))	
   #parse("gui/mobile/pane3_record_actions.vm")
 #end
-<button onclick="document.location='?return=gui/pane1'">&lArr; home</button>
-<button onclick="document.location='?return=gui/mobile/pane2_selector'">&lArr; $report</button>
+<div style="float:left">
+  <button onclick="document.location='?return=gui/pane1'">&lArr; home</button>
+  <button onclick="document.location='?return=gui/mobile/pane2_selector'">&lArr; $report</button>
+</div>
 </div>
 ## What content to display in pane 3? View, edit etc.
 ## #set($mobile_pane3_selection = $sessionData.getCustomString("mobile_pane3_selection"))
