Mobile header buttons overlap debug

--- a/gtpb_clientside/resources/mobile/override.css
+++ b/gtpb_clientside/resources/mobile/override.css
@@ -105,6 +105,7 @@ table#reportData tr.rowb  {
 #mobile_header button {
   vertical-align: middle;
   font-size: 12pt;
+  margin-bottom: 0.5em;
 }
 
 #mobile_footer {
