--- a/gtpb_clientside/resources/mobile/override.css
+++ b/gtpb_clientside/resources/mobile/override.css
@@ -144,6 +144,7 @@ table#reportData tr.rowb  {
 
 /* Related info in pane 3 */
 #pane3_related {
+	width: 100%;
   -moz-column-count: 3;
   -webkit-column-count: 3;
   column-count: 3;
