--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -654,8 +654,10 @@ div#reportData {
   border: 1px solid white;
   font-size: 10pt;
   padding: 0.2em;
+  /* 
   position: relative;
   top: -0.4em;
+  */
   border-radius: 0.5em;
   font-family: Arial, Helvetica, sans-serif;
 }
