--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -692,6 +692,11 @@ div#reportData {
   margin-left: 1em;
 }
 
+.block .fieldname {
+  position: relative;
+  top: 0.4em;
+}
+
 .date select, .date input {
   width: auto!important;
   float: none!important;
