--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -692,7 +692,7 @@ div#reportData {
   margin-left: 1em;
 }
 
-.block .fieldname {
+.two_cols .block .fieldname {
   position: relative;
   top: 0.4em;
 }
@@ -720,8 +720,11 @@ div#reportData {
   width: auto;
   margin-right: 0.5em;
   margin-left: 0;
-  margin-top: 0.4em;
   top: 0;  
+}
+
+#reportData .two_cols .block input[type=checkbox] {
+  margin-top: 0.4em;
 }
 
 #reportData .block input[type=file] {
