--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -92,7 +92,7 @@
           <div class="upload_progress_bar"></div>
           <span class="upload_info" upload_speed="$view.getUploadSpeed()"></span>
         </div>
-      </form><br />
+      </form><br #if($fieldValueObject.isImage() && $field.getAttachmentType() == "IMAGE") style="clear:left" #end />
   	#end
   #end
 #end ## if !$globalEdit
