--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -620,6 +620,7 @@ div#reportData {
   margin-right: 0;
   margin-top: 0;
   padding: 1em;
+  padding-bottom: 0.5em;
   border-radius: 0.5em;
   break-inside: avoid-column;
   -webkit-column-break-inside: avoid;
