--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -3,7 +3,8 @@ body{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 
 /* Menu styles */
 body{
-	font: 13px/1.5 Arial, Sans-serif;
+	font: 9pt/1.5 Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 }
 
 h1{
