--- a/gtpb_clientside/resources/jquery.autocomplete.css
+++ b/gtpb_clientside/resources/jquery.autocomplete.css
@@ -29,7 +29,8 @@
 	when scroll mode will be used
 	*/
 	/*width: 100%;*/
-	font-family: Arial, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 	font-size: 10pt;
 	/* 
 	it is very important, if line-height not setted or setted 
