--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -13,7 +13,8 @@
 
 body { 
   background-color:#f0f0f0; 
-  font-family:sans-serif,Arial;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
   font-size:10pt;
   margin: 0;
   overflow: hidden;
@@ -164,7 +165,8 @@ table#reportData td input {
   border: 1px solid #cecece;
   border-radius: 0.5em;
   padding: 0.3em;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 }
 
 table#reportData td input[type='text'] {
@@ -184,7 +186,8 @@ table#reportData td select {
   border-radius: 0.5em;
   border: 1px solid #cecece;
   padding: 0.3em;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 }
 
 table#reportData td .date select {
@@ -207,7 +210,8 @@ textarea {
   border: 1px solid #cecece;
   border-radius: 0.5em;
   padding: 0.3em;
-  font-family: Arial, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
   font-size: 10pt;
 }
 
@@ -378,7 +382,8 @@ div#recordUnlock button div small, div#recordUnlock div#staticMessage small
 
 /* Match chart headings */
 #wordcloud h1 {
-  font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,Arial,Helvetica,sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
   color: #3E576F;
   font-weight: normal;
   font-size: 16px;
@@ -667,7 +672,8 @@ div#reportData {
   top: -0.4em;
   */
   border-radius: 0.5em;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 }
 
 #reportData .block select {
@@ -683,7 +689,8 @@ div#reportData {
 
 #reportData .block textarea {
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
 }
 
 #reportData .block .date {
