--- a/gtpb_clientside/styles/farmfresh_print_production_sheet.css
+++ b/gtpb_clientside/styles/farmfresh_print_production_sheet.css
@@ -1,4 +1,8 @@
-html, body {font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
+html, body {
+  font-family: Verdana,Arial,sans-serif;
+  font-size-adjust: 0.58;
+  font-size: 10pt
+}
 h1 {font-size: 14pt;}
 th {font-size: 10pt; font-weight: bold; text-align: left;}
 .pagebreakafter {page-break-after: always}
