--- a/gtpb_clientside/WEB-INF/templates/gui/development/send_requests.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/send_requests.vm
@@ -22,7 +22,7 @@
   <title>Send Requests</title>
 	<style>
 	  * { 
-		  font-family:Arial;
+		  /* font-family:Arial; */
 			font-size:10pt;
 			}
 	
