--- a/gtpb_clientside/WEB-INF/templates/gui/import/after_import.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/import/after_import.vm
@@ -19,7 +19,8 @@
 <head>
 <link href="styles/report.css" type="text/css" rel="stylesheet" />
 <style>
-	html, body { font-family: "Arial", sans-serif; 
+	html, body { 
+           /* font-family: "Arial", sans-serif; */ 
     			 color: black; 
     			 font-size: 11pt; 
     			 margin:0; 
