--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -35,7 +35,7 @@
 		  }
 	
 	      html, body { 
-	        font-family: "Arial", sans-serif; 
+	        /* font-family: "Arial", sans-serif;  */
 		    color: black; 
 		    font-size: 11pt; 
 		    margin:0; 
