--- a/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_basic.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_basic.vm
@@ -42,7 +42,7 @@
 									 
 			body { padding-bottom:0;
 					 	 position:absolute;
-					 	 font-family:sans-serif,Arial;
+					 	 /* font-family:sans-serif,Arial; */
     	       font-size:10pt;
 						 }
 						 
