--- a/gtpb_clientside/WEB-INF/templates/gui/administration/roles/__roles_admin_options.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/roles/__roles_admin_options.vm
@@ -25,7 +25,7 @@
     html, body { padding:0;
     	             margin:0;
     	             height:100%;
-    	             font-family:sans-serif,Arial;
+    	             /* font-family:sans-serif,Arial; */
     	             font-size:10pt;
     	           }
     	           
