--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -33,7 +33,7 @@
 		  }
 	
 	      html, body { 
-	        font-family: "Arial", sans-serif; 
+	        /* font-family: "Arial", sans-serif;  */
     			    color: black; 
     			    font-size: 11pt; 
     			    margin:0; 
