--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout.vm
@@ -32,7 +32,7 @@
 		  }
 	
 	      html, body { 
-	        font-family: "Arial", sans-serif; 
+	        /* font-family: "Arial", sans-serif;  */
     			    color: black; 
     			    font-size: 11pt; 
     			    margin:0; 
