--- a/gtpb_clientside/WEB-INF/templates/report_error.vm
+++ b/gtpb_clientside/WEB-INF/templates/report_error.vm
@@ -18,7 +18,8 @@
 <html>
 <head>
 <style>
-	html, body { font-family: "Arial", sans-serif; 
+	html, body { 
+  /* font-family: "Arial", sans-serif;  */
     			 color: black; 
     			 font-size: 11pt; 
     			 margin:0; 
