--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -26,7 +26,7 @@
       html, body { padding:0;
     	             margin:0;
     	             height:100%;
-    	             font-family:sans-serif,Arial;
+    	             /* font-family:sans-serif,Arial; */
     	             font-size:10pt;
     	           }
 				   
