--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -10,7 +10,8 @@ html,body {
 }
 
 body {
-	font-family: "MS Sans Serif", arial, sans_serif;
+	font-family: Verdana, Arial, sans_serif;
+	font-size-adjust: 0.58;
 	font-size: 10pt;
 	margin: 0px;
 	padding: 0px;
