--- a/gtpb_clientside/styles/main.css
+++ b/gtpb_clientside/styles/main.css
@@ -1,7 +1,11 @@
 html, body { height:100% }
 
-body { font-family:"MS Sans Serif",arial, sans_serif; font-size:10pt; margin:0px; padding:0px; behavior:url(scripts/body_behaviors.htc) }
-h1, h2, h3, big { font-family: "Trebuchet MS",arial, sans_serif; font-weight:normal }
+body {
+	font-family: Verdana, Arial, sans_serif;
+	font-size-adjust: 0.58;
+	font-size:10pt; margin:0px; padding:0px; behavior:url(scripts/body_behaviors.htc)
+}
+h1, h2, h3, big { font-family: Verdana, Arial, sans-serif; font-size-adjust: 0.58; font-weight:normal }
 h2 { font-size:16pt }
 form { margin:0; padding:0px }
 td { font-size:9pt; padding-right:10px; vertical-align:top }
