--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -31,8 +31,7 @@ h2 {
 	/* background: url(tree/drop-shadow.gif) bottom repeat-x; */
 	cursor: hand;
 	cursor: pointer;
-	font-size: 13px;
-	font-weight: bold;
+	font-size: 12pt;
 	height: 23px;
 	/* border-top: #CECECE 1px solid; */
 }
