--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -11,8 +11,8 @@ h1{
 	position: relative; /* Fixes some obscure bug in IE */
 	padding: 5px 0 8px 10px;
 	/* background: #fff; */
-	font-weight: bold;
-	font-style: italic;
+	font-size: 12pt;
+	text-transform: uppercase;
 	margin-bottom: -3px;
 	/* background: white url(tree/line.gif) repeat-x 0 50%; */
 	color: #888;
@@ -31,7 +31,7 @@ h2 {
 	/* background: url(tree/drop-shadow.gif) bottom repeat-x; */
 	cursor: hand;
 	cursor: pointer;
-	font-size: 12pt;
+	font-size: 10pt;
 	height: 23px;
 	/* border-top: #CECECE 1px solid; */
 }
