--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -730,7 +730,8 @@ div#reportData {
   width: auto;
   margin-right: 0.5em;
   margin-left: 0;
-  top: 0;  
+  position: relative;
+  top: -0.3em;  
 }
 
 #reportData .two_cols .block input[type=checkbox] {
